[wip] firebase auth

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-FIREBASE_CREDENTIALS=
+FIREBASE_CREDENTIALS=./firebase_credentials.json
+FIREBASE_DATABASE_URL=
 
 LOG_CHANNEL=stack
 
